feat: update to java 23 (#7)